syntax = "proto3";

// each class is defined in each own file, inside a common package

import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "Contract";

package Contract; // package do proto

service Contract {
  rpc isIpAlive(Void) returns (IpReply);
  rpc submitImage(Image) returns (stream ImageId);
  rpc getLandmarksFromRequest(ImageId) returns (stream LandmarkProtoResult);
  rpc getMap(MapChoice) returns (GetImageMap);
  rpc getNamesFrnomTImage(GetImageNamesWithTRequest) returns (stream LandmarkProtoResult);
}

message Void {
}

// input messages

message Image{
  bytes image = 1;
  string name = 2;
  string type = 3;
}

message GetImageNamesWithTRequest{
  double t = 1;
}

message MapChoice{
  string id = 1;
  uint32 choice = 2;

}

///////////////////////////////////////////////////////////////////////////////////////////////////

//output messages
message IpReply {
  bool alive=1;
}

message ImageId {
  string id = 1;
}

message LandmarkProtoResult{
  string name = 1;
  double latitude = 2;
  double longitude = 3;
  double percentage = 4;
}

message GetImageMap{
  bytes map = 1;
}


